--- a/assets/scss/_init.scss
+++ b/assets/scss/_init.scss
@@ -17,7 +17,8 @@ a {
 .container {
   margin: 0 auto;
   max-width: 1124px;
-  padding: 0 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .btn {
